--- a/customer-reviews/index.html
+++ b/customer-reviews/index.html
@@ -1,73 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" sizes="32x32" href="" />
-  <link rel="stylesheet" href="scss/style.css" />
-  <title>Guglex Mentor | Customer reviews card component</title>
-</head>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="scss/style.css" />
+    <title>Frontend Mentor | Reviews card component</title>
+  </head>
+  <body>
+    <section class="section-review">
+      <div class="review">
+        <div class="review__card">
+          <span class="review__quote">
+            &quot;
+          </span>
+          <p class="review__description">
+            Omnifood is just awesome! I just launched a startup which leaves me
+            with no time for cooking, so Omnifood is a life-saver. Now that I
+            got used to it, I couldn't live without my daily meals!
+          </p>
 
-<body>
-  <section class="section-review">
-    <div class="review">
-      <div class="review__card">
-        <span class="review__quote">
-          &quot;
-        </span>
-        <p class="review__description">
-          Omnifood is just awesome! I just launched a startup which leaves me
-          with no time for cooking, so Omnifood is a life-saver. Now that I
-          got used to it, I couldn't live without my daily meals!
-        </p>
+          <div class="review__user">
+            <img
+              src="images/customer-1.jpg"
+              class="review__user--img"
+              alt="Grace optican review"
+              srcset=""
+            />
+            <p class="review__user__name">Software Engineer</p>
+          </div>
+        </div>
 
-        <div class="review__user">
-          <img src="images/customer-1.jpg" class="review__user--img" alt="Grace optican review" srcset="" />
-          <p class="review__user__name">Software Engineer</p>
+        <div class="review__card">
+          <span class="review__quote">
+            &quot;
+          </span>
+          <p class="review__description">
+            I was looking for a quick and easy food delivery service in San
+            Franciso. I tried a lot of them and ended up with Omnifood. Best
+            food delivery service in the Bay Area. Keep up the great work!
+          </p>
+
+          <div class="review__user">
+            <img
+              src="images/customer-2.jpg"
+              class="review__user--img"
+              alt="albero duncan review"
+              srcset=""
+            />
+            <p class="review__user__name">Alberto Duncan</p>
+          </div>
+        </div>
+
+        <div class="review__card">
+          <span class="review__quote">
+            &quot;
+          </span>
+          <p class="review__description">
+            Inexpensive, healthy and great-tasting meals, delivered right to my
+            home. We have lots of food delivery here in Lisbon, but no one comes
+            even close to Omifood. Me and my family are so in love!
+          </p>
+
+          <div class="review__user">
+            <img
+              src="images/customer-3.jpg"
+              class="review__user--img"
+              alt="albeto openar review"
+              srcset=""
+            />
+            <p class="review__user__name"> System Support Engineer </p>
+          </div>
         </div>
       </div>
+    </section>
 
-
-      <div class="review__card">
-        <span class="review__quote">
-          &quot;
-        </span>
-        <p class="review__description">
-          I was looking for a quick and easy food delivery service in San
-          Franciso. I tried a lot of them and ended up with Omnifood. Best
-          food delivery service in the Bay Area. Keep up the great work!
-        </p>
-
-        <div class="review__user">
-          <img src="images/customer-2.jpg" class="review__user--img" alt="albero duncan review" srcset="" />
-          <p class="review__user__name">Alberto Duncan</p>
-        </div>
-      </div>
-
-      <div class="review__card">
-        <span class="review__quote">
-          &quot;
-        </span>
-        <p class="review__description">
-          Inexpensive, healthy and great-tasting meals, delivered right to my
-          home. We have lots of food delivery here in Lisbon, but no one comes
-          even close to Omifood. Me and my family are so in love!
-        </p>
-
-        <div class="review__user">
-          <img src="images/customer-3.jpg" class="review__user--img" alt="albeto openar review" srcset="" />
-          <p class="review__user__name">System Support Engineer</p>
-        </div>
-      </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#"> Acquah Samuel </a>.
     </div>
-  </section>
-
-  <div class="attribution">
-    Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">
-      Acquah Samuel </a>.
-  </div>
-</body>
-
+  </body>
 </html>
