--- a/food-landing/index.html
+++ b/food-landing/index.html
@@ -3,10 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/png" sizes="32x32" href="" />
-		<link rel="stylesheet" href="scss/style.css" />
-		<title> Guglex Mentor | Food landing page component</title>
+		<link rel="stylesheet" href="vendors/css/normalize.css" />
+		<link rel="stylesheet" href="vendors/css/grid.css" />
+		<link rel="stylesheet" href="vendors/css/ionicons.min.css" />
 
+		<link rel="stylesheet" href="resources/css/style.css" />
+
+		<title>Landing page</title>
 	</head>
 	<body>
 		<header class="header">
@@ -36,7 +39,7 @@
 
 				<div class="hero-right">
 					<figure class="hero-right__img">
-						<img src="images/app-iPhone.png" alt="" />
+						<img src="resources/img/app-iPhone.png" alt="" />
 					</figure>
 				</div>
 			</section>
